<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TextView android:id="@id/begin_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_label"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@id/begin_date_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button android:id="@id/begin_time_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView android:id="@id/end_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_label"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@id/end_date_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <Button android:id="@id/end_time_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView android:id="@id/allday_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/allday_label"
        android:textColor="@android:color/white"
        />
    <CheckBox android:id="@id/allday_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView android:id="@id/event_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@id/title_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/event_title"
            android:layout_weight="1"
            />
        <ImageButton android:id="@id/title_recognizer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_btn_speak_now"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@id/description_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:layout_weight="1"
            />
        <ImageButton android:id="@id/description_recognizer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_btn_speak_now"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@id/location_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/event_location"
            android:layout_weight="1"
            />
        <ImageButton android:id="@id/location_recognizer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_btn_speak_now"
            />
    </LinearLayout>

    <TextView android:id="@id/add_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_label"
        android:textColor="@android:color/white"
        />
    <Button android:id="@id/add_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        />
</LinearLayout>
</ScrollView>
